--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Vivan Marwaha is a writer, thinker, and entrepreneur."
+      content="Vivan Marwaha is a writer, thinker, and entrepreneur. Vivan is the author of the forthcoming book, What Millennials Want (Penguin Random House), an intimate biography of Indian millennials, the world’s single-largest demographic group."
     />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
